Bug 424844 - "Detach canvas" still toggled in View menu after closing detached canvas
Summary: "Detach canvas" still toggled in View menu after closing detached canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.3.0
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-31 00:25 UTC by tomtomtomreportingin
Modified: 2021-03-16 05:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2020-07-31 00:25:43 UTC
SUMMARY
After closing a detached canvas, the "Detach canvas" setting listed under View is still toggled, and requires clicking twice to detach the canvas again.

STEPS TO REPRODUCE
1. Detach the canvas
2. Close the detached canvas
3. Attempt to detach the canvas again

OBSERVED RESULT
"Detach canvas" is still toggled. Untoggling it does nothing. Have to click it again to actually detach the canvas.

EXPECTED RESULT
"Detached canvas" should be untoggled. Clicking it should have detached it the first time.

SOFTWARE/OS VERSIONS
I'm using the appimage so I'm not sure if it matters, but:
Linux/KDE Plasma: Debian sid
(available in About System)
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Detaching the canvas through Window layouts produces the same problem in reverse.
Comment 1 Tiar 2020-07-31 00:30:03 UTC
Checked and confirmed. Interestingly, when closing the window with detached canvas, it just returns to undetached state, which seems quite nice. But yeah, the checkbox is wrong then.
Comment 2 Dmitry Kazakov 2021-03-16 05:22:43 UTC
Git commit 1134a90f92e40c318d36c331c8ad5e57723cb804 by Dmitry Kazakov, on behalf of Reinold Rojas.
Committed on 16/03/2021 at 05:22.
Pushed by dkazakov into branch 'master'.

Fix detach canvas toggle

M  +1    -0    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/commit/1134a90f92e40c318d36c331c8ad5e57723cb804