Fix detach canvas toggle

BUG:424844